これほんま審査通らんかったら飲んだくれるで

--- a/package.json
+++ b/package.json
@@ -6,19 +6,14 @@
 	"scripts": {
 		"test:script": "jest",
 		"test": "npm-run-all --sequential test:script",
-
 		"build:firefox": "webpack --mode=production --config=webpack.config.ts --env=browser=firefox",
 		"watch:firefox": "webpack --watch --cache --mode=development --config=webpack.config.ts --env=browser=firefox",
-
 		"browser:firefox": "web-ext run --source-dir=./dist --start-url about:debugging about:addons",
 		"prebrowser:firefox-sk": "mkdirp X:\\fx",
 		"browser:firefox-sk": "npm run browser:firefox -- --keep-profile-changes --firefox-profile=X:\\fx ",
-
-		"debug:firefox": "npm-run-all --parallel watch:firefox browser:firefox",
-		"debug:firefox-sk": "npm-run-all --parallel watch:firefox browser:firefox-sk",
-
+		"debug:firefox": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox",
+		"debug:firefox-sk": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox-sk",
 		"lint:firefox": "web-ext lint --source-dir=./dist",
-
 		"check": "ncu",
 		"update": "ncu -u && npm install"
 	},
@@ -49,9 +44,10 @@
 			"**/source/test/**/*"
 		],
 		"collectCoverage": true,
-		"coverageDirectory": "coverage/script"
+		"coverageDirectory": "coverage"
 	},
 	"devDependencies": {
+		"@types/jest": "^29.1.2",
 		"@types/webpack": "^5.28.0",
 		"cp-cli": "^2.0.0",
 		"css-loader": "^6.7.1",
