--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"rimraf": "^3.0.2",
 		"sass": "^1.55.0",
 		"sass-loader": "^13.1.0",
+		"style-loader": "^3.3.1",
 		"ts-jest": "^29.0.3",
 		"ts-loader": "^9.4.1",
 		"ts-node": "^10.9.1",
