--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@types/webpack": "^5.28.0",
 		"cp-cli": "^2.0.0",
 		"css-loader": "^6.7.1",
+		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.1.2",
 		"mkdirp": "^1.0.4",
 		"normalize-sass": "^1.0.0",
