--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	},
 	"devDependencies": {
 		"@types/jest": "^29.1.2",
+		"@types/webextension-polyfill": "^0.9.1",
 		"@types/webpack": "^5.28.0",
 		"cp-cli": "^2.0.0",
 		"css-loader": "^6.7.1",
