--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"debug:firefox": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox",
 		"debug:firefox-sk": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox-sk",
 		"lint:firefox": "web-ext lint --source-dir=./dist",
+		"output:firefox": "cd dist && web-ext build",
 		"check": "ncu",
 		"update": "ncu -u && npm install"
 	},
