--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"css-loader": "^6.7.1",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.1.2",
+		"jest-environment-jsdom": "^29.2.1",
 		"mkdirp": "^1.0.4",
 		"normalize-sass": "^1.0.0",
 		"npm-check-updates": "^16.3.11",
