--- a/package.json
+++ b/package.json
@@ -34,12 +34,10 @@
 			"js"
 		],
 		"transform": {
-			"^.+\\.ts$": "ts-jest"
-		},
-		"globals": {
-			"ts-jest": {
-				"tsconfig": "tsconfig.json"
-			}
+			"^.+\\.ts$": [
+				"ts-jest",
+				"tsconfig.json"
+			]
 		},
 		"testMatch": [
 			"**/source/test/**/*"
