cross-env/dotenv で何とかしようと思ったけどいっちょん分からんかった

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
 		"build:firefox": "webpack --mode=production --config=webpack.config.ts --env=browser=firefox",
 		"watch:firefox": "webpack --watch --cache --mode=development --config=webpack.config.ts --env=browser=firefox",
 		"browser:firefox": "web-ext run --source-dir=./dist --start-url about:debugging about:addons",
-		"prebrowser:firefox-sk": "mkdirp X:\\fx",
-		"browser:firefox-sk": "npm run browser:firefox -- --keep-profile-changes --firefox-profile=X:\\fx ",
+		"prebrowser:firefox-env": "mkdirp X:\\fx",
+		"browser:firefox-env": "npm run browser:firefox -- --keep-profile-changes --firefox-profile=X:\\fx ",
 		"debug:firefox": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox",
-		"debug:firefox-sk": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox-sk",
+		"debug:firefox-env": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox-env",
 		"lint:firefox": "web-ext lint --source-dir=./dist",
 		"output:firefox": "cd dist && web-ext build",
 		"check": "ncu",
