--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"jsonc-parser": "^3.2.0",
 		"mkdirp": "^1.0.4",
 		"normalize-sass": "^1.0.0",
+		"normalize-scss": "^7.0.1",
 		"npm-check-updates": "^16.3.11",
 		"npm-run-all": "^4.1.5",
 		"rimraf": "^3.0.2",
