--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "__MSG_we_description__",
 	"main": "index.js",
 	"scripts": {
+		"test-watch-script": "jest --watchAll",
 		"test:script": "jest --runInBand",
 		"test": "npm-run-all --sequential test:script",
 		"build:firefox": "webpack --mode=production --config=webpack.config.ts --env=browser=firefox",
