--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"browser:firefox-env": "npm run browser:firefox -- --keep-profile-changes --firefox-profile=X:\\fx ",
 		"debug:firefox": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox",
 		"debug:firefox-env": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox-env",
+		"lint:script": "eslint ./source/scripts/**/*.{js,ts}",
 		"lint:firefox": "web-ext lint --source-dir=./dist",
 		"output:firefox": "cd dist && web-ext build",
 		"check": "ncu",
@@ -50,8 +51,11 @@
 		"@types/jest": "^29.2.0",
 		"@types/webextension-polyfill": "^0.9.1",
 		"@types/webpack": "^5.28.0",
+		"@typescript-eslint/eslint-plugin": "^5.41.0",
+		"@typescript-eslint/parser": "^5.41.0",
 		"cp-cli": "^2.0.0",
 		"css-loader": "^6.7.1",
+		"eslint": "^8.26.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.2.2",
 		"jest-environment-jsdom": "^29.2.2",
