--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@types/jest": "^29.2.0",
 		"@types/webextension-polyfill": "^0.9.1",
 		"@types/webpack": "^5.28.0",
+		"copy-webpack-plugin": "^11.0.0",
 		"cp-cli": "^2.0.0",
 		"css-loader": "^6.7.1",
 		"html-webpack-plugin": "^5.5.0",
