--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"cp-cli": "^2.0.0",
 		"css-loader": "^6.7.1",
 		"html-webpack-plugin": "^5.5.0",
+		"image-minimizer-webpack-plugin": "^3.8.0",
 		"jest": "^29.2.2",
 		"jest-environment-jsdom": "^29.2.2",
 		"jsonc-parser": "^3.2.0",
@@ -66,6 +67,7 @@
 		"sass": "^1.55.0",
 		"sass-loader": "^13.1.0",
 		"style-loader": "^3.3.1",
+		"svgo": "^3.0.0",
 		"ts-jest": "^29.0.3",
 		"ts-loader": "^9.4.1",
 		"ts-node": "^10.9.1",
