Squashed commit of the following:
commit 3006708655f1a58b75c299dee7766f143a5eac57
Author: sk <content.type.text.net@gmail.com>
Date:   Thu Nov 3 19:38:08 2022 +0900

    アイコンサイズは適当に変更

commit 892e5af2136251e4545e5fcdeceae14f082a8a78
Author: sk <content.type.text.net@gmail.com>
Date:   Thu Nov 3 19:36:03 2022 +0900

    こんなもんかなぁ

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"rimraf": "^3.0.2",
 		"sass": "^1.55.0",
 		"sass-loader": "^13.1.0",
+		"sharp": "^0.31.1",
 		"style-loader": "^3.3.1",
 		"svgo": "^3.0.0",
 		"ts-jest": "^29.0.3",
