--- a/.github/workflows/build-works.yml
+++ b/.github/workflows/build-works.yml
@@ -9,7 +9,10 @@ jobs:
 
     strategy:
       matrix:
-        BROWSER: ["firefox"]
+        BROWSER: [
+          "firefox",
+          "chrome"
+        ]
 
     steps:
       - name: <Checkout> Repository
