--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
 		"watch:firefox": "webpack --watch --cache --mode=development --config=webpack.config.ts --env=browser=firefox",
 		"watch:chrome": "webpack --watch --cache --mode=development --config=webpack.config.ts --env=browser=chrome",
 		"browser:firefox": "web-ext run --source-dir=./dist --start-url about:debugging about:addons",
+		"browser:chrome": "chrome\\windows.bat --homepage=chrome://extensions",
 		"prebrowser:firefox-env": "mkdirp X:\\fx",
 		"browser:firefox-env": "npm run browser:firefox -- --keep-profile-changes --firefox-profile=X:\\fx ",
+		"prebrowser:chrome-env": "mkdirp X:\\ch",
+		"browser:chrome-env": "npm run browser:chrome -- --user-data-dir=X:\\ch",
 		"debug:firefox": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox",
 		"debug:firefox-env": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox-env",
+		"debug:chrome-env": "npm run build:chrome && npm-run-all --parallel watch:chrome browser:chrome-env",
 		"lint:firefox": "web-ext lint --source-dir=./dist",
 		"lint:chrome": "echo 0",
 		"output:firefox": "cd dist && web-ext build",
