--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"browser:chrome-env": "npm run browser:chrome -- --user-data-dir=X:\\ch",
 		"debug:firefox": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox",
 		"debug:firefox-env": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox-env",
+		"debug:chrome": "npm run build:chrome && npm-run-all --parallel watch:chrome browser:chrome",
 		"debug:chrome-env": "npm run build:chrome && npm-run-all --parallel watch:chrome browser:chrome-env",
 		"lint:firefox": "web-ext lint --source-dir=./dist",
 		"lint:chrome": "echo 0",
@@ -55,7 +56,7 @@
 		"coverageDirectory": "coverage"
 	},
 	"devDependencies": {
-		"@types/jest": "^29.2.0",
+		"@types/jest": "^29.2.2",
 		"@types/webextension-polyfill": "^0.9.1",
 		"@types/webpack": "^5.28.0",
 		"copy-webpack-plugin": "^11.0.0",
@@ -69,12 +70,12 @@
 		"mkdirp": "^1.0.4",
 		"normalize-sass": "^1.0.0",
 		"normalize-scss": "^7.0.1",
-		"npm-check-updates": "^16.3.15",
+		"npm-check-updates": "^16.3.16",
 		"npm-run-all": "^4.1.5",
 		"rimraf": "^3.0.2",
-		"sass": "^1.55.0",
+		"sass": "^1.56.0",
 		"sass-loader": "^13.1.0",
-		"sharp": "^0.31.1",
+		"sharp": "^0.31.2",
 		"style-loader": "^3.3.1",
 		"svgo": "^3.0.0",
 		"ts-jest": "^29.0.3",
