chrome --- windows only

--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
 		"watch:firefox": "webpack --watch --cache --mode=development --config=webpack.config.ts --env=browser=firefox",
 		"watch:chrome": "webpack --watch --cache --mode=development --config=webpack.config.ts --env=browser=chrome",
 		"browser:firefox": "web-ext run --source-dir=./dist --start-url about:debugging about:addons",
-		"browser:chrome": "chrome\\windows.bat --homepage=chrome://extensions",
-		"prebrowser:firefox-env": "mkdirp X:\\fx",
-		"browser:firefox-env": "npm run browser:firefox -- --keep-profile-changes --firefox-profile=X:\\fx ",
-		"prebrowser:chrome-env": "mkdirp X:\\ch",
-		"browser:chrome-env": "npm run browser:chrome -- --user-data-dir=X:\\ch",
+		"browser:chrome": "start \"\" \"%npm_config_PTD_CHROME_APPLICATION%\" --homepage=chrome://extensions",
+		"prebrowser:firefox-env": "mkdirp \"%npm_config_PTD_FIREFOX_PROFILE_DIRECTORY%\"",
+		"browser:firefox-env": "npm run browser:firefox -- --keep-profile-changes --firefox-profile=\"%npm_config_PTD_FIREFOX_PROFILE_DIRECTORY%\"",
+		"prebrowser:chrome-env": "mkdirp \"%npm_config_PTD_CHROME_PROFILE_DIRECTORY%\"",
+		"browser:chrome-env": "npm run browser:chrome -- --user-data-dir=\"%npm_config_PTD_CHROME_PROFILE_DIRECTORY%\"",
 		"debug:firefox": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox",
 		"debug:firefox-env": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox-env",
 		"debug:chrome": "npm run build:chrome && npm-run-all --parallel watch:chrome browser:chrome",
