--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "page-translation-dictionary",
 	"version": "0.0.1",
-	"description": "__MSG_we_description__",
+	"description": "__MSG_ext_description__",
 	"main": "index.js",
 	"scripts": {
 		"test-watch-script": "jest --watchAll",
