--- a/.github/workflows/build-works.yml
+++ b/.github/workflows/build-works.yml
@@ -25,7 +25,7 @@ jobs:
           cache: npm
 
       - name: <Install> NPM
-        run: npm install
+        run: npm ci
 
       - name: <Test> Script
         run: npm run test
