--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
 		"strictBindCallApply": true,
 		"forceConsistentCasingInFileNames": true,
 		"useUnknownInCatchVariables": true,
-		"noUncheckedIndexedAccess": true,
+		// "noUncheckedIndexedAccess": true, むりだぁ
 		"noImplicitOverride": true,
 		"sourceMap": true,
 		"target": "es2021",
