--- a/source/manifest/chrome.jsonc
+++ b/source/manifest/chrome.jsonc
@@ -2,14 +2,14 @@
 	"manifest_version": 3,
 	"permissions": [
 		"storage",
-		"unlimitedStorage"
+		"unlimitedStorage",
 	],
 	"icons": {
 		"16": "extension-icon@16.png",
 		"32": "extension-icon@32.png",
 		"48": "extension-icon@48.png",
 		"96": "extension-icon@96.png",
-		"128": "extension-icon@128.png"
+		"128": "extension-icon@128.png",
 	},
 	"default_locale": "ja",
 	"content_scripts": [
@@ -27,16 +27,16 @@
 		"default_icon": {
 			"16": "extension-icon@16.png",
 			"32": "extension-icon@32.png",
-			"48": "extension-icon@48.png"
+			"48": "extension-icon@48.png",
 		},
 		"default_title": "ptd",
-		"default_popup": "popup-action.html"
+		"default_popup": "popup-action.html",
 	},
 	"background": {
 		"service_worker": "background.js"
 	},
 	"options_ui": {
 		"open_in_tab": true,
-		"page": "application-options.html"
+		"page": "application-options.html",
 	}
 }
