--- a/source/manifest/firefox.jsonc
+++ b/source/manifest/firefox.jsonc
@@ -2,6 +2,7 @@
 	"manifest_version": 2,
 	"applications": {
 		"gecko": {
+			"id": "{808ac942-eef2-41f4-b1e3-bb5a8b759688}",
 			"strict_min_version": "60.0"
 		}
 	},
