--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"test:watch": "jest --watchAll",
 		"test:script": "jest --runInBand",
 		"test": "npm-run-all --sequential test:script",
-		"build:firefox": "webpack --mode=production --config=webpack.config.ts --env=browser=firefox",
-		"build:chrome": "webpack --mode=production --config=webpack.config.ts --env=browser=chrome",
+		"build:development:firefox": "webpack --mode=development --config=webpack.config.ts --env=browser=firefox",
+		"build:development:chrome": "webpack --mode=development --config=webpack.config.ts --env=browser=chrome",
+		"build:production:firefox": "webpack --mode=production --config=webpack.config.ts --env=browser=firefox",
+		"build:production:chrome": "webpack --mode=production --config=webpack.config.ts --env=browser=chrome",
 		"watch:firefox": "webpack --watch --cache --mode=development --config=webpack.config.ts --env=browser=firefox",
 		"watch:chrome": "webpack --watch --cache --mode=development --config=webpack.config.ts --env=browser=chrome",
 		"browser:firefox": "web-ext run --source-dir=./dist --start-url about:debugging about:addons",
@@ -17,10 +19,10 @@
 		"browser:firefox-env": "npm run browser:firefox -- --keep-profile-changes --firefox-profile=\"%npm_config_PTD_FIREFOX_PROFILE_DIRECTORY%\"",
 		"prebrowser:chrome-env": "mkdirp \"%npm_config_PTD_CHROME_PROFILE_DIRECTORY%\"",
 		"browser:chrome-env": "npm run browser:chrome -- --user-data-dir=\"%npm_config_PTD_CHROME_PROFILE_DIRECTORY%\"",
-		"debug:firefox": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox",
-		"debug:firefox-env": "npm run build:firefox && npm-run-all --parallel watch:firefox browser:firefox-env",
-		"debug:chrome": "npm run build:chrome && npm-run-all --parallel watch:chrome browser:chrome",
-		"debug:chrome-env": "npm run build:chrome && npm-run-all --parallel watch:chrome browser:chrome-env",
+		"debug:firefox": "npm run build:development:firefox && npm-run-all --parallel watch:firefox browser:firefox",
+		"debug:firefox-env": "npm run build:development:firefox && npm-run-all --parallel watch:firefox browser:firefox-env",
+		"debug:chrome": "npm run build:development:chrome && npm-run-all --parallel watch:chrome browser:chrome",
+		"debug:chrome-env": "npm run build:development:chrome && npm-run-all --parallel watch:chrome browser:chrome-env",
 		"lint:firefox": "web-ext lint --source-dir=./dist",
 		"lint:chrome": "echo 0",
 		"output:firefox": "cd dist && web-ext build --overwrite-dest",
