--- a/.github/workflows/build-works.yml
+++ b/.github/workflows/build-works.yml
@@ -46,4 +46,50 @@ jobs:
           path: dist
 
 
+  deploy:
+    needs: build
+
+    if: github.ref == 'refs/heads/develop'
+
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: <Download> Application
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-firefox
+          path: dist-firefox
+
+      - name: <Download> Application
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-chrome
+          path: dist-chrome
+
+      - name: <Show> 🌳🌲🌳🌲
+        run: find
+
+      - name: Get current date
+        id: date
+        run: echo "date=$(date -u +'%Y-%m-%d_%H%M%SZ')" >> $GITHUB_OUTPUT
+
+      # - name: <Create> Release
+      #   uses: actions/github-script@v6
+      #   with:
+      #     script: |
+      #       const releaseId = await github.rest.git.createRef({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         ref: "refs/tags/${{ steps.date.outputs.date }}",
+      #         sha: context.sha
+      #       })
+
+      # - name: <Upload> Applications
+      #   uses: svenstaro/upload-release-action@v2
+      #   with:
+      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #     file: dist/*.json
+      #     file_glob: true
+      #     tag: ${{ steps.date.outputs.date }}
+
 
