混入した " の削除が出来なくてGHAで削除する謎作業
CLIが秘密鍵読めなくてめっちゃしんどかったぞ

----------------------------------

ふあー

もうほんま

\

aaa

""

"

aaaaaaa

おえぇ

うーわー、これめんど

ほあー

--- a/.github/workflows/build-works.yml
+++ b/.github/workflows/build-works.yml
@@ -49,7 +49,7 @@ jobs:
   deploy:
     needs: build
 
-    if: github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/master'
 
     runs-on: ubuntu-22.04
 
@@ -74,10 +74,7 @@ jobs:
 
       - name: Get Version
         id: version
-        run: echo "version=$(cat package.json | jq '.version')" >> $GITHUB_OUTPUT
-
-      - name: 💩
-        run: echo ${{ steps.version.outputs.version }}
+        run: echo "version=$(cat package.json | jq --raw-output '.version')" >> $GITHUB_OUTPUT
 
       - name: <Create> Release
         uses: actions/github-script@v6
@@ -94,15 +91,15 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: dist-firefox/web-ext-artifacts/*.zip
-          file_glob: true
+          file: dist-firefox/web-ext-artifacts/page-translation-dictionary-${{ steps.version.outputs.version }}.zip
+          asset_name: firefox-page-translation-dictionary-${{ steps.version.outputs.version }}.zip
           tag: ${{ steps.version.outputs.version }}
 
       - name: <Upload> Applications [Chrome]
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: dist-chrome/web-ext-artifacts/*.zip
-          file_glob: true
+          file: dist-chrome/web-ext-artifacts/page-translation-dictionary-${{ steps.version.outputs.version }}.zip
+          asset_name: chrome-page-translation-dictionary-${{ steps.version.outputs.version }}.zip
           tag: ${{ steps.version.outputs.version }}
 
