--- a/source/manifest/firefox.jsonc
+++ b/source/manifest/firefox.jsonc
@@ -31,7 +31,7 @@
 	],
 	"browser_action": {
 		"default_icon": "extension-icon.svg",
-		"default_title": "ptd",
+		"default_title": "__MSG_ext_name__",
 		"default_popup": "popup-action.html",
 	},
 	"background": {
