--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"postoutput:chrome": "ts-node ./source/build/output-rename.ts chrome",
 		"license": "ts-node ./source/generator/license-generator.ts",
 		"check": "ncu",
-		"update": "ncu -u && npm install && npm run check"
+		"update": "ncu -u && npm install && npm run license"
 	},
 	"repository": {
 		"type": "git",
@@ -73,11 +73,11 @@
 		"license-checker": "^25.0.1",
 		"mkdirp": "^1.0.4",
 		"normalize-sass": "^1.0.0",
-		"npm-check-updates": "^16.6.0",
+		"npm-check-updates": "^16.6.2",
 		"npm-run-all": "^4.1.5",
-		"sass": "^1.57.0",
+		"sass": "^1.57.1",
 		"sass-loader": "^13.2.0",
-		"sharp": "^0.31.2",
+		"sharp": "^0.31.3",
 		"style-loader": "^3.3.1",
 		"svgo": "^3.0.2",
 		"ts-jest": "^29.0.3",
