--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"description": "__MSG_ext_description__",
 	"main": "index.js",
 	"scripts": {
+		"lint": "eslint",
+		"lint-fix": "eslint --fix",
 		"test:script": "jest --runInBand",
 		"test": "npm-run-all --sequential test:script",
 		"build:development:firefox": "webpack --mode=development --config=webpack.config.ts --env=browser=firefox",
@@ -63,8 +65,13 @@
 		"@types/jest": "^29.4.0",
 		"@types/webextension-polyfill": "^0.10.0",
 		"@types/webpack": "^5.28.0",
+		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/parser": "^5.53.0",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.3",
+		"eslint": "^8.35.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-import": "^2.27.5",
 		"html-webpack-plugin": "^5.5.0",
 		"image-minimizer-webpack-plugin": "^3.8.1",
 		"jest": "^29.4.3",
