--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "__MSG_ext_description__",
 	"main": "index.js",
 	"scripts": {
-		"lint": "eslint",
-		"lint-fix": "eslint --fix",
+		"lint": "eslint --ext .ts .",
+		"lint-fix": "eslint --fix --ext .ts .",
 		"test:script": "jest --runInBand",
 		"test": "npm-run-all --sequential test:script",
 		"build:development:firefox": "webpack --mode=development --config=webpack.config.ts --env=browser=firefox",
