--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
 		"eslint:recommended",
 		"airbnb-base"
 	],
+	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"sourceType": "module",
 		"project": "./tsconfig.json"
