いやぁ、つらない？

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,12 @@
 	},
 	"plugins": [
 		"@typescript-eslint"
-	]
+	],
+	"rules": {
+		"indent": [
+			"error",
+			"tab"
+		],
+		"no-tabs": "off"
+	}
 }
