--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "__MSG_ext_description__",
 	"main": "index.js",
 	"scripts": {
-		"lint": "eslint ./source/**/*.ts",
-		"lint-fix": "eslint --fix --ext .ts source",
+		"lint": "eslint ./source/scripts/**/*.ts",
+		"lint-fix": "eslint --fix ./source/scripts/**/*.ts",
 		"test:script": "jest --runInBand",
 		"test": "npm-run-all --sequential test:script",
 		"build:development:firefox": "webpack --mode=development --config=webpack.config.ts --env=browser=firefox",
