--- a/.github/workflows/build-works.yml
+++ b/.github/workflows/build-works.yml
@@ -21,7 +21,7 @@ jobs:
       - name: <Add> Node/NPM
         uses: actions/setup-node@v3
         with:
-          node-version: 18.12.1
+          node-version-file: ./.node-version
           cache: npm
 
       - name: <Install> NPM
